@@ -1687,12 +1687,14 @@ if (defined('INSTALL_PHP')) $lang_install = array(
   'r_mode' => 'Required mode',
   'ready_to_roll' => '<a href="index.php">Coppermine</a> is now properly configured and ready to roll.<br /><br /><a href="login.php">Login</a> using the information you provided for your admin account.',
   'sect_create_adm' => 'This section requires information to create your coppermine administration account. Use only alphanumeric characters. Enter the data carefully!',
+  'sect_storage_module' => 'This section lets you select the active Storage Module. If you don\'t know what Storage Modules are just click "Last step...". If you do know what they are, please <b>don\'t forget to define storage servers in Config</b> once the installation is done.', // OVI
   'sect_mysql_info' => 'This section requires information on how to access your MySQL database.<br />If you don\'t know how to fill them, check with your webhost support.',
   'sect_mysql_sel_db' => 'Here you have to choose which database you want to use for Coppermine. <br />If your mysql account has the needed privileges, you can create a new database from within the installer or you can use an existing database. If you don\'t like both options, you will have to create a database first outside the coppermine installer, then return here then select the new database from the dropdown box below. You can also change the table prefix (Don\'t use dots though), but keeping the default prefix is recommended.',
   'select_lang' => 'Select default language: ',
   'sql_file_not_found' => 'The file \'%s\' could not be found. Check that you have uploaded all Coppermine files to your server',
   'status' => 'Status',
   'subdir_called' => 'A subdirectory called \'%s\' should normally exist in the directory where you uploaded Coppermine. <br />The installer can\'t find this directory. Check that you have uploaded all Coppermine files to your server.',
+  'title_storage_module' => 'Select the storage module', // OVI
   'title_admin' => 'Create Coppermine Administrator',
   'title_dir_check' => 'Checking Directory Permissions',
   'title_file_check' => 'Checking Installation Files',
@@ -1709,6 +1711,7 @@ if (defined('INSTALL_PHP')) $lang_install = array(
   'unable_write_config' => 'Unable to write config file',
   'user_err' => 'Admin username must only contain alphanumeric characters and can\'t be empty.',
   'username' => 'Username',
+  'active_storage_module' => 'Active Storage Module', // OVI
   'your_admin_account' => 'Your admin account',
   'no_cookie' => 'Your browser did not accept our cookie (although it was a sweet one). It is recommended to accept cookies.',
   'no_javascript' => 'Your browser doesn\'t seem to have javascript enabled, it is highly recommended to enable it.',
